test_regress/t/t_class_localparam_dotref_funcref_arg_bad.out
%Error-UNSUPPORTED: t/t_class_localparam_dotref_funcref_arg_bad.v:27:32: dotted expressions in parameters
                                                                       : ... note: In instance 't'
                                                                       : ... Suggest use a typedef
   27 |   localparam int y = D#(C#(7)::get_a())::x;
      |                                ^~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: t/t_class_localparam_dotref_funcref_arg_bad.v:27:32: Can't convert defparam value to constant: Param 'v' of 'D'
                                                           : ... note: In instance 't'
   27 |   localparam int y = D#(C#(7)::get_a())::x;
      |                                ^~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
